Fixed overflow of tables

--- a/bcap373_app/static/bcap373_app/css/main.css
+++ b/bcap373_app/static/bcap373_app/css/main.css
@@ -321,7 +321,7 @@ dt {
 
     .data-item dl {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
         column-gap: 1vw;
     }
 
